# loui_robot_laptop_test

./: .gitignore  README.md
no_ros/3Dto2D/: depth.py  test_pointfile.json
no_ros/ICP/: pointcloud_mapping.cpp
no_ros/common_tool/: evaluate.py  line_graph.py  show_imu.py
no_ros/controlcan/: Makefile  main.cpp  test_cpp  usb权限.txt
no_ros/dense_RGBD/: pointcloud_mapping.cpp
no_ros/dense_RGBD/data/: pose.txt
no_ros/feature_extract_match/: CMakeLists.txt  main.cpp
no_ros/img_process/: CMakeLists.txt  change_pixel.cpp
no_ros/joinMap/: .4fc8392bb7523b71613daa1023808d02ad22b66c.cam  config.txt  i_map.pcd  joinMap.cpp  pose.txt
no_ros/openni2/: CMakeLists.txt  open_color.cpp  open_depth.cpp  open_depth_color.cpp  openni_cv_test.cpp  simple_demo.cpp
ros_ws/devel/: .catkin  _setup_util.py
ros_ws/devel/include/control_can_motor/: Motor.h
ros_ws/devel/include/motor_info_listener/: Motor.h
ros_ws/devel/lib/control_can_motor/: listener1
ros_ws/devel/lib/imu_odom_test/: imu_odom_test
ros_ws/devel/lib/laptop_control_motor/: control_motor
ros_ws/devel/lib/motor_info_listener/: listener
ros_ws/devel/lib/pkgconfig/: control_can_motor.pc  imu_odom_test.pc  laptop_control_motor.pc  motor_info_listener.pc  show_image_raw.pc
ros_ws/devel/lib/show_image_raw/: save_image  show_image_raw  show_imu
ros_ws/install/: .rosinstall  local_setup.sh  setup.sh
ros_ws/src/control_can_motor/: CMakeLists.txt  package.xml
ros_ws/src/imu_odom_test/: CMakeLists.txt
ros_ws/src/laptop_control_motor/: CMakeLists.txt
ros_ws/src/show_image_raw/: CMakeLists.txt
(+30 files in other folders)
